// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CNavGroupItems customize 1`] = `
<div>
  <ul
    class="nav-group-items bazinga"
  >
    Test
  </ul>
</div>
`;

exports[`loads and displays CNavGroupItems component 1`] = `
<div>
  <ul
    class="nav-group-items"
  >
    Test
  </ul>
</div>
`;
